// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  width: inherit;
}

.c13 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c12"
      role="row"
    >
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c12"
      role="row"
    >
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c12"
      role="row"
    >
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Actions Column 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c16 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c16,
.c16[type='button'],
.c16[type='reset'],
.c16[type='submit'] {
  -webkit-appearance: button;
}

.c16::-moz-focus-inner,
.c16[type='button']::-moz-focus-inner,
.c16[type='reset']::-moz-focus-inner,
.c16[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c16:-moz-focusring,
.c16[type='button']:-moz-focusring,
.c16[type='reset']:-moz-focusring,
.c16[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Actions Column
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c12 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c16"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c16"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c16"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c17"
          >
            <svg
              aria-hidden="true"
              className="c18"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Custom Title 1`] = `
.c7 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -2px;
  margin-right: -2px;
}

.c5 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c5 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c10 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c10 > *:not(:first-child) {
  padding-top: 0;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c16 {
  width: inherit;
}

.c18 {
  overflow: hidden;
}

.c11 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c11 > *:first-child {
  padding-left: 0;
}

.c11 > *:last-child {
  padding-right: 0;
}

.c17 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c17:hover {
  background: #F5F5F5;
}

.c17 > *:first-child {
  padding-left: 0;
}

.c17 > *:last-child {
  padding-right: 0;
}

.c12 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c14 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table Custom With Title
  </span>
  <div
    aria-labelledby="custom-title-title"
    className="c2 c3"
    id="custom-title"
    role="table"
  >
    <div
      className="c4"
      id="custom-title-title"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <svg
            className="c7"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
        <div
          className="c6"
        >
          <span
            className="c8"
          >
            Ericsson Corporation
          </span>
        </div>
        <div
          className="c6"
        >
          <span
            className="c9"
          >
            (
            ERICSSON
            )
          </span>
        </div>
      </div>
    </div>
    <div
      className="c10 c11 c12"
      role="row"
    >
      <div
        className="c13 c14"
        role="columnheader"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c9"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c13 c14"
        role="columnheader"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c9"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c13 c14"
        role="columnheader"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c9"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c10 c17"
      role="row"
    >
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c10 c17"
      role="row"
    >
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c10 c17"
      role="row"
    >
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c13 c18"
        role="cell"
      >
        <div
          className="c15 c16"
        >
          <span
            className="c19"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Footer 1`] = `
.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c10 {
  width: inherit;
}

.c13 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c15 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c8 {
  overflow: hidden;
}

.c16 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Footer
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c12"
      role="row"
    >
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c12"
      role="row"
    >
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c12"
      role="row"
    >
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c7 c13"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c14"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c4 c5 c15"
      role="row"
    >
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c17"
          >
            Footer 1
          </span>
        </div>
      </div>
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c17"
          >
            Footer 2
          </span>
        </div>
      </div>
      <div
        className="c7 c16"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c17"
          >
            Footer 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Title 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c12 {
  width: inherit;
}

.c15 {
  overflow: hidden;
}

.c7 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c7 > *:first-child {
  padding-left: 0;
}

.c7 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c8 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c10 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Title
  </span>
  <div
    aria-labelledby="table-with-title-title"
    className="c2 c3"
    id="table-with-title"
    role="table"
  >
    <div
      className="c4"
      id="table-with-title-title"
    >
      <span
        className="c1 c5"
      >
        Table with title
      </span>
    </div>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="some-other-table-title"
    className="c2 c3"
    id="some-other-table"
    role="table"
  >
    <div
      className="c4"
      id="some-other-table-title"
    >
      <span
        className="c1 c5"
      >
        Some other table
      </span>
    </div>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
